# cosmetic-communist-3

./: package-lock.json  package.json  schema.surql
cosmetic_communist_bot/: Cargo.toml
cosmetic_communist_bot/src/: channel_config.rs  found_cosmetic_event.rs  main.rs
cosmetic_communist_web/: package-lock.json  schema.surql
cosmetic_communist_web/src/lib/: cookie.ts  database.ts
cosmetic_communist_web/src/lib/components/: CosmeticList.svelte  DiscordAccount.svelte  FoundCosmetics.svelte  FoundSomething.svelte
cosmetic_communist_web/src/routes/: +page.svelte
cosmetic_communist_web/src/routes/discord/: +server.ts
src/lib/: database.ts
src/lib/components/: CosmeticList.svelte  FoundCosmetics.svelte
src/routes/: +page.svelte
