[package]
name = "cosmetic_communist_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serenity = "0.12.4"
poise = "0.6.1"
dotenv = "0.15.0"
surrealdb = "2.1.4"
simple_logger = "5.0.0"
log = "0.4.25"
